package Part2_DesignPattern.Structural.Decorator_Pattern.b2;

import java.util.List;

public interface Tokenize {
    List<String> tokenize();
}
